--- a/secondapp/src/main/AndroidManifest.xml
+++ b/secondapp/src/main/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TwoActivity">
+        <activity android:name=".TwoActivity" android:launchMode="singleTop" android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="com.example.secondapp.ACTION_VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity">
