--- a/secondapp/src/main/AndroidManifest.xml
+++ b/secondapp/src/main/AndroidManifest.xml
@@ -9,10 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TwoActivity" android:launchMode="singleTop" android:exported="true">
+        <activity android:name=".ThreeActivity">
             <intent-filter>
-                <action android:name="com.example.secondapp.ACTION_VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".TwoActivity"
+            android:exported="true"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="com.example.secondapp.ACTION_VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity">
